update stats and schema
